# kagami-house-usb2nrf

./: .gitignore  .hgignore  README.md
fw/: Firmware module structure.dia
fw/Actuator Alpha/: Actuator Alpha.atsln  Actuator Alpha.componentinfo.xml  Actuator Alpha.cproj  RF custom functions.c  RF custom functions.h  main.c
fw/Black debug/: Black debug.componentinfo.xml  Black debug.cproj  RF custom functions.c  RF custom functions.h  main.c
fw/KagamiCore/: KagamiCore.componentinfo.xml  KagamiCore.cproj  RF functions.c  RF functions.h  RF info.c  RF info.h  RF model master.c  RF model slave.c  RF model.c  RF model.h  RF protocol internal.h  RF protocol.c  RF protocol.h  UART functions.c  UART functions.h  UART parser.c  UART parser.h  UART protocol.c  UART protocol.h  build number.py  defines.h  library.c  nRF model.c  nRF model.h  nrf24l01.c  sstring.h  version.h
fw/usb2nrf/: 1202_lib.c  1202_lib.h  RF custom functions.c  RF custom functions.h  RF functions.c  RF functions.h  RF info.c  RF info.h  RF model master.c  RF model master.h  RF model slave.c  RF model.c  RF model.h  RF parser.c  RF parser.h  RF protocol.c  RF protocol.h  RF statistics.c  RF statistics.h  Settings.c  Settings.h  UART functions.c  UART functions.h  UART parser.c  UART parser.h  UART protocol.c  UART protocol.h  asm.S  build number.py  defines.h  functions.c  functions.h  main.c  make-messages.py  messages.c  messages.h  messages.ini  my-stdlib.c  my-stdlib.h  nRF model.c  (+11 more)
fw/usb2nrf debug/: KagamiCore.cproj  RF custom functions.c  RF custom functions.h  main.c  usb2nrf.atsln  usb2nrf.cproj
fw/usb2nrf/Actuator Alpha/: Actuator Alpha.componentinfo.xml  Actuator Alpha.cproj  main.c
fw/usb2nrf/GccApplication1/: GccApplication1.componentinfo.xml  GccApplication1.cproj  RF custom functions.h
fw/usb2nrf_tests/: .hgignore  CMakeLists.txt  RF model test.cpp  RF model test.h  RF parser.c  RF parser.h  RFParser.c  functions.c  functions.h  main.cpp  messages.h  nRF model.c  nRF model.h  pgmspace.c  pgmspace.h  test_functions.cpp  test_protocol.cpp  tests.c  tests.cpp  tests.h  uartfunctionstest.cpp  uartfunctionstest.h  uartprotocoltest.cpp  uartprotocoltest.h  units_structure.cpp  units_structure.h  usb2nrf_tests.pro
hw/: usb2nrf-cache.lib  usb2nrf.kicad_pcb  usb2nrf.pro  usb2nrf.sch
sw/serial-debugger/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packet.cpp  packet.h  serial-debugger.pro  serialthread.cpp  serialthread.h
